--- a/climate.ipynb
+++ b/climate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,21 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7f8558c3b5b0>,\n",
-       " 'prcp': 0.08,\n",
-       " 'id': 1,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7fc4afbc8d60>,\n",
        " 'date': '2010-01-01',\n",
+       " 'tobs': 65.0,\n",
        " 'station': 'USC00519397',\n",
-       " 'tobs': 65.0}"
+       " 'id': 1,\n",
+       " 'prcp': 0.08}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,22 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7f8554f55850>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7fc4b17d62e0>,\n",
+       " 'latitude': 21.2716,\n",
+       " 'id': 1,\n",
+       " 'elevation': 3.0,\n",
        " 'station': 'USC00519397',\n",
        " 'name': 'WAIKIKI 717.2, HI US',\n",
-       " 'id': 1,\n",
-       " 'longitude': -157.8168,\n",
-       " 'latitude': 21.2716,\n",
-       " 'elevation': 3.0}"
+       " 'longitude': -157.8168}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "datetime.date(2017, 8, 23)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "datetime.date(2016, 8, 22)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
        " ...]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "[2230 rows x 1 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
        "Name: Precipitation, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1522,19 +1522,27 @@
        "[('USC00519281', 53.0, 87.0, 73.09795396419437)]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
-    "\n"
+    "\n",
+    "sel = [Station.station,\n",
+    "      func.min(Measurement.tobs),\n",
+    "      func.max(Measurement.tobs),\n",
+    "      func.avg(Measurement.tobs)]\n",
+    "most_active_station_stats = session.query(*sel).\\\n",
+    "       filter(Station.station == station_num[0][0]).\\\n",
+    "        all()\n",
+    "most_active_station_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -1926,7 +1934,7 @@
        " ('2017-08-18', 79.0)]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,18 +1942,155 @@
    "source": [
     "# Using the most active station id\n",
     "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "sel = [Station.station,\n",
+    "      func.min(Measurement.tobs),\n",
+    "      func.max(Measurement.tobs),\n",
+    "      func.avg(Measurement.tobs)]\n",
+    "\n",
+    "most_active_station_stats = session.query(*sel).\\\n",
+    "      filter(Station.station == station_num[0][0]).\\\n",
+    "       all()\n",
+    "station_id = most_active_station_stats[0][0]\n",
+    "lowest_temp = most_active_station_stats[0][1]\n",
+    "highest_temp = most_active_station_stats[0][2]\n",
+    "avg_temp = round(most_active_station_stats[0][3], 2)\n",
     "most_act_last_12 = session.query(Measurement.date, Measurement.tobs).\\\n",
     "    filter(Measurement.date > year_ago).\\\n",
     "    filter(Measurement.station == station_id).\\\n",
     "    all()\n",
-    "\n",
-    "most_act_last_12\n",
-    "\n"
+    "    \n",
+    "most_act_last_12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(most_act_last_12, columns = ['Date', 'Temperature'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-08-23</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-08-24</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-08-25</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-08-26</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-08-27</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>2017-08-14</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>2017-08-15</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>2017-08-17</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>2017-08-18</td>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>352 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  Temperature\n",
+       "0    2016-08-23         77.0\n",
+       "1    2016-08-24         77.0\n",
+       "2    2016-08-25         80.0\n",
+       "3    2016-08-26         80.0\n",
+       "4    2016-08-27         75.0\n",
+       "..          ...          ...\n",
+       "347  2017-08-14         77.0\n",
+       "348  2017-08-15         77.0\n",
+       "349  2017-08-16         76.0\n",
+       "350  2017-08-17         76.0\n",
+       "351  2017-08-18         79.0\n",
+       "\n",
+       "[352 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1962,8 +2107,6 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(most_act_last_12, columns = ['Date', 'Temperature'])\n",
-    "\n",
     "df.plot.hist(color=\"blue\", figsize=(15, 8), bins=12)\n",
     "\n",
     "plt.xlabel('Date', fontsize = 15)\n",
@@ -1983,13 +2126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Close Session\n",
     "session.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
